--- a/web/index.html
+++ b/web/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My super project!</title>
+  <title>Jaunt</title>
 </head>
 <body>
-<!-- header -->
 <div>
   <h1>Hello</h1>
 </div>
 
-<div>       <!-- content -->
-  <div>    <!-- button holder -->
+<div>
+  <div>
     <button onclick="location.href='/jsp_war_exploded/main'">Click here</button>
   </div>
 </div>
